--- a/frikr/templates/base.html
+++ b/frikr/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %} Bienvenido a Frikr - Como Flickr, pero en friki {% endblock %}</title>
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.teheme.min.css' %}">
 </head>
 <body>
     <nav>
@@ -13,6 +16,8 @@
         <a href="{% url 'photos_list' %}">Listado de fotos</a>
         |
         {% if user.is_authenticated %}
+        <a href="{% url 'user_photos' %}">Mis fotos</a>
+        |
             <a href="{% url 'create_photo' %}">Crear foto</a>
         |
             <a href="{% url 'users_logout' %}">Salir</a>
